hphp/hack/test/typecheck/classname/classname_without_generic.php.exp
File "classname_without_generic.php", line 4, characters 13-21:
Missing type parameter to classname; classname is entirely meaningless without one (Naming[2066])
