hphp/hack/test/typecheck/classname/classname_without_generic.php
<?hh

final class ClassNameTest {
  const vec<classname> CLASS_VEC = vec[];
}
